--- a/style.css
+++ b/style.css
@@ -13,14 +13,13 @@
     width: 100px;
     height: 100px;
     background: red;
-    transition: height 2s ease-in;
-    transition: width 2s ease-in;
+    transition: transform 4s ease-in;
 
 }
 
 .ex-2-square:active{
-  width: 500px;
-  height: 300px;
+  transform: scale(3,6)
+
 }
 
 .ex-3-square {
@@ -53,21 +52,129 @@
     width: 60px;
     height: 60px;
     background: red;
+    transition: transform 3s ease-in;
+    
 }
+
+.ex-5-square:hover{
+  transform: scale(1.5,1.5)  
+}
+
+.ex-5-square:active{
+  transform: scale(0.5,0.5);
+}
+
+
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
 
-.ex-9-img {
-    margin: 50px 100px;
-    width: 400px;
+.ex-6-img:hover {
+  filter: grayscale(100%);
 }
+
+.ex-7-img{
+  transition: filter 2s ease-in;
+}
+
+.ex-7-img:hover {
+  filter: grayscale(100%);
+}
+
+.ex-8-img {
+  transition: filter 2s ease-in;
+  transition: border-radius 2s ease-in;
+}
+
+.ex-8-img:hover {
+  filter: contrast(200%);
+  filter: grayscale(100%);
+  border-radius: 25px;
+}
+
+.ex-9-img {
+  margin: 50px 100px;
+  width: 400px;
+  transition: filter 2s ease-in;
+  transition: transform 3s ease-in;
+  transition: border-radius 3s ease-in;
+}
+
+.ex-9-img:hover{
+  filter: grayscale(100%);
+  filter: contrast(200%);
+  border-radius: 25px;
+  transform: scale(1.3,1.3);
+
+
+}
+
+
+
+
 .ex-10-icon {
     font-size: 60px;
+    transition: transform 1800s linear;
 }
+
+.ex-10-icon:hover {
+  transform: rotate(3600turn);
+
+}
+
+@keyframes ruota{
+  0%{transform: rotate(0turn);}
+  50%{transform: rotate(0.75turn);}
+  100%{transform: rotate(-0.75turn);}
+
+}
+
+
 .ex-11-icon {
     font-size: 60px;
+    
+
 }
+
+.ex-11-icon:hover {
+  
+  animation-name: ruota;
+
+}
+/* esercizio 12 */
+
+@keyframes gira1 {
+  0%   {left:19px; top:-10px;}
+  20%  {left:150px; top:-10px;}
+  40%  {left:150px; top:55px;}
+  60%  {left:-10px; top:55px;}
+  80% {left:-10px; top:-10px;}
+  100%{left:19px; top:-10px}
+}
+
+@keyframes gira2 {
+  0%   {left:95px; top:55px;}
+  20%  {left:-10px; top:55px;}
+  40%  {left:-10px; top:-10px;}
+  60%  {left:150px; top:-10px;}
+  80% {left:150px; top:55px;}
+  100%{left:95px; top:55px}
+}
+
+.ex-13-button:hover .ex-13-top-white, .ex-13-button:hover .ex-13-bottom-white{    
+  animation-duration: 1s;
+  animation-iteration-count: infinite;  
+}  
+
+.ex-13-button:hover .ex-13-top-white{
+  animation-name: gira1;
+}
+
+.ex-13-button:hover .ex-13-bottom-white{  
+  animation-name: gira2;
+   
+}  
+
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
@@ -81,6 +188,11 @@
     text-align: center;
     text-decoration: none;
 }
+
+
+
+
+
 .ex-12-top-white, .ex-13-top-white {
     position: absolute;
     top: -10px;
@@ -88,6 +200,8 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+    transition: transform 2s ease-in;
+
 }
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
@@ -96,4 +210,18 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+    transition: transform 2s ease-in;
+
+}
+
+
+.ex-12-button:hover .ex-12-top-white {
+  /* background: red; */
+  transform: translate(100px);
+}
+
+.ex-12-button:hover .ex-12-bottom-white{
+  /* background: red; */
+  transform: translate(-100px);
+
 }
