--- a/style.css
+++ b/style.css
@@ -110,35 +110,36 @@
 }
 
 
+@keyframes ruota-infinito{
+  0%{transform: rotate(0deg);}
+  100%{transform: rotate(360deg);}
 
+}
 
 .ex-10-icon {
     font-size: 60px;
-    transition: transform 1800s linear;
 }
 
 .ex-10-icon:hover {
-  transform: rotate(3600turn);
+  animation: ruota-infinito 1s linear infinite;
+  
 
 }
 
 @keyframes ruota{
-  0%{transform: rotate(0turn);}
-  50%{transform: rotate(0.75turn);}
-  100%{transform: rotate(-0.75turn);}
-
+  0%{transform: rotate(0deg);}
+  50%{transform: rotate(270deg);}
+  100%{transform: rotate(0deg);}
 }
 
 
 .ex-11-icon {
-    font-size: 60px;
-    
-
+    font-size: 60px; 
 }
 
 .ex-11-icon:hover {
   
-  animation-name: ruota;
+  animation: ruota 3s ease-in;
 
 }
 /* esercizio 12 */
